# tree-height-estimation

./: EDA.py  README.md  SVR.py  image_pre_processing_functions.py  pyproject.toml  random-forest.py  reading_tif_files.py  reading_validation_datasets.py  subsetting-pipeline.py  utility_functions.py  validation_2018.html  vosges-coordinates.json  xgboost.py
B1/: 2019-04-01_2019-05-01_S2-B1_vosges-mountains-subset.tif  2019-05-01_2019-06-01_S2-B1_vosges-mountains-subset.tif  2019-06-01_2019-07-01_S2-B1_vosges-mountains-subset.tif  2019-07-01_2019-08-01_S2-B1_vosges-mountains-subset.tif  2019-08-01_2019-09-01_S2-B1_vosges-mountains-subset.tif  2019-09-01_2019-10-01_S2-B1_vosges-mountains-subset.tif  2019-11-01_2019-12-01_S2-B1_vosges-mountains-subset.tif  2019-12-01_2020-01-01_S2-B1_vosges-mountains-subset.tif  2020-01-01_2020-02-01_S2-B1_vosges-mountains-subset.tif  2020-02-01_2020-03-01_S2-B1_vosges-mountains-subset.tif  2020-03-01_2020-04-01_S2-B1_vosges-mountains-subset.tif  2020-04-01_2020-05-01_S2-B1_vosges-mountains-subset.tif  2020-05-01_2020-06-01_S2-B1_vosges-mountains-subset.tif  2020-06-01_2020-07-01_S2-B1_vosges-mountains-subset.tif  2020-07-01_2020-08-01_S2-B1_vosges-mountains-subset.tif  2020-08-01_2020-09-01_S2-B1_vosges-mountains-subset.tif  2020-09-01_2020-10-01_S2-B1_vosges-mountains-subset.tif  2020-10-01_2020-11-01_S2-B1_vosges-mountains-subset.tif  2020-11-01_2020-12-01_S2-B1_vosges-mountains-subset.tif  2020-12-01_2021-01-01_S2-B1_vosges-mountains-subset.tif  2021-01-01_2021-02-01_S2-B1_vosges-mountains-subset.tif  (+45 more)
(+1443 files in other folders)
