[tool.poetry]
name = "pandas"
version = "0.1.0"
description = ""
authors = ["Andreea Mateescu <andreea.mateescu@source.ag>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
plotly = "^5.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
